Posts are now shipshape and most of the spacing/font issues have been resolved.
Former-commit-id: 68e47dad2d3f0da0a1b7127154b1c47331c96d82

--- a/_sass/layouts/_footer.scss
+++ b/_sass/layouts/_footer.scss
@@ -2,9 +2,10 @@
   position: static;
   background-color: $darkest-blue;
   color: $white;
-  padding: 3rem 0;
+  padding: 1rem 0;
   &_brand {
     width: 25%;
+    margin-top: 2rem;
     @include media($phablet) {
       width: 15%;
     }
