--- a/_sass/layouts/_masthead.scss
+++ b/_sass/layouts/_masthead.scss
@@ -75,13 +75,13 @@
 .site-description {
   margin-top: 0.5rem;
   font-family: $alt-font;
-  //@include font-size(16);
+  @include font-size(16);
   font-weight: 400;
   @include font-size(28, no, 28);
   font-style: italic;
   @include animation-duration(1s);
   @include animation-delay(1s);
   @include media($phablet) {
-    @include font-size(20);
+    //@include font-size(20);
   }
 }
