--- a/_sass/pages/_portfolio.scss
+++ b/_sass/pages/_portfolio.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-size: 100%;
   &:after {
     content: "";
     display: table;
